# vinyl-lang

./: 001.asm  002.asm  README.md
ansi/: color.py
asm/: .gitignore  001.asm  002.asm  003.asm  (+4 more)
compiler/: .gitignore  example.lp  pyproject.toml
compiler/src/compiler/: analyser.py  arch.py  code_gen.py  ir.py  lexer.py  main.py  parser.py  pseudo.py  x86_64.py
compiler/tests/: test_code_gen.py  test_ir.py  test_lexer.py  test_parser.py  test_pseudo.py
compiler/tests/snapshots/test_code_gen/test_code_gen_aarch64/add_all/: out.asm
compiler/tests/snapshots/test_code_gen/test_code_gen_aarch64/addition/: out.asm
compiler/tests/snapshots/test_code_gen/test_code_gen_aarch64/assign/: out.asm
compiler/tests/snapshots/test_code_gen/test_code_gen_aarch64/assign_expr/: out.asm
compiler/tests/snapshots/test_code_gen/test_code_gen_aarch64/block/: out.asm
compiler/tests/snapshots/test_code_gen/test_code_gen_aarch64/call_fn/: out.asm
compiler/tests/snapshots/test_code_gen/test_code_gen_aarch64/dereference/: out.asm
compiler/tests/snapshots/test_code_gen/test_code_gen_aarch64/exit/: out.asm
compiler/tests/snapshots/test_code_gen/test_code_gen_aarch64/fn/: out.asm
compiler/tests/snapshots/test_code_gen/test_code_gen_aarch64/print/: out.asm
compiler/tests/snapshots/test_code_gen/test_code_gen_aarch64/print_let/: out.asm
compiler/tests/snapshots/test_code_gen/test_code_gen_aarch64/print_x2/: out.asm
compiler/tests/snapshots/test_code_gen/test_code_gen_aarch64/second_var/: out.asm
compiler/tests/snapshots/test_code_gen/test_code_gen_aarch64/sub_all/: out.asm
(+4 files in other folders)
