[project]
name = "compiler"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "andrewgryan", email = "andrew.ryan@metoffice.gov.uk"},
]
dependencies = [
    "typer>=0.12.5",
    "pytest-watcher>=0.4.3",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
test = [
    "pytest>=8.3.3",
    "pytest-snapshot>=0.9.0",
]
dev = [
    "black>=24.10.0",
]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true


[tool.pdm.scripts]
compile = "typer compiler.main run"
fmt = "black --line-length 65 ."
test = "pytest"
snapshot = "pytest --snapshot-update"
watch = "ptw ."
